--- a/Coupons/Promotion.Coupon/Views/Home/InitFlow.cshtml
+++ b/Coupons/Promotion.Coupon/Views/Home/InitFlow.cshtml
@@ -63,7 +63,7 @@
                         <div class="col-md-6">
                             <label>Cupom:</label>
                             <div class="uploader" id="uniform-report-screenshot">
-                                <input type="file" id="file" name="file" class="form-control">
+                                <div class="uploader" id="uniform-report-screenshot"><input type="file" class="styled form-control" id="file" name="file"><span class="filename" style="user-select: none;">No file selected</span><span class="action" style="user-select: none;">Choose File</span></div>
                             </div>
                             <span class="help-block">Accepted formats: gif, png, jpg. Max file size 2Mb</span>
                         </div>
