--- a/Coupons/Promotion.Coupon/Areas/Admin/Views/Receipt/VPowerWinners.cshtml
+++ b/Coupons/Promotion.Coupon/Areas/Admin/Views/Receipt/VPowerWinners.cshtml
@@ -37,7 +37,7 @@
                                     if (name == "reprovados")
                                     {
                                         <td>
-                                            @receipt.invalidateDescription
+                                            @*@receipt.invalidateDescription*@ ???
                                         </td>
                                     }
                                 }                                 
