--- a/Coupons/Promotion.Coupon/Areas/Admin/Views/Account/Login.cshtml
+++ b/Coupons/Promotion.Coupon/Areas/Admin/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-    <title>Administração - Promoção Tanque Cheio</title>
+    <title>Administração - Promoção Gym Pass</title>
     <link href="/Content/Styles/Admin/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/Content/Styles/Admin/londinium-theme.css" rel="stylesheet" type="text/css">
     <link href="/Content/Styles/Admin/styles.css" rel="stylesheet" type="text/css">
