Finalização de telas e ajustes
Finalizado com ressalvas, envio de email precisa de um email validar, esta comentado na aplicação no envio para nao causar erro, basta descomentar e adicionar credencias validas para o serviço funcionar corretamente.

--- a/Coupons/Promotion.Coupon/Content/Styles/Admin/styles.css
+++ b/Coupons/Promotion.Coupon/Content/Styles/Admin/styles.css
@@ -3215,7 +3215,7 @@ body > .jGrowl {
 
 .uploader span.action {
   width: 28px;
-  background: url(../images/forms/add_files.png) no-repeat 0 0;
+  background: url(/Content/Images/Admin/forms/add_files.png) no-repeat 0 0;
   height: 28px;
   cursor: pointer;
   float: right;
