uns par de coisa

--- a/Coupons/Promotion.Coupon/Views/Home/Index.cshtml
+++ b/Coupons/Promotion.Coupon/Views/Home/Index.cshtml
@@ -1,15 +1,241 @@
 ﻿<!DOCTYPE html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Gympass Intimus Sport</title>
+        <meta name="description" content="Conheça o produto na prática com a Promoção Gympass Intimus Sport">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="/Content/css/index-site.css">        
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/admin/plugins/forms/inputmask.js")"></script>      
+    </head>
+    <body>
+        <!--[if lte IE 9]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+        <![endif]-->
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Index</title>
-</head>
-<body>
-<div> 
-    <p>Escolha uma das opções</p>
-    <a href="/promotion/product-v-power">Promoção V-POWER</a> <br />
-    <a href="/promotion/product-lubrificantes">Promoção LUBRIFICANTES</a>
-</div>
-</body>
+        <!-- Add your site or application content here -->
+        <div id="header">
+        	<div class="header-wrapper container">
+        		<div class="logo">
+        			<h1><img src="/Content/Images/logo.png" /></h1>
+        			<h3>Siga em frente</h3>
+        		</div>
+        		<div class="menu">
+        			<div class="menu-wrapper">
+        				<ul>
+        					<li><img src="/Content/Images/icon-menu-intimus.png" /><span><a href="https://www.intimus.com.br/">Intimus</a></span></li>
+        					<li><img src="/Content/Images/icon-menu-produtos.png" /><span><a href="https://www.intimus.com.br/produtos/">Produtos</a></span></li>
+        					<li><img src="/Content/Images/icon-menu-calendario-menstrual.png" /><span><a href="https://www.intimus.com.br/calendario-menstrual">Calendário Mesntrual</a></span></li>
+        				</ul>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <div id="content">
+        	<div class="introduction container">
+        		<div class="promo-logo mobile">
+        			<div class="promo-text">Promoção</div>
+        			<div class="promo-img"><img src="/Content/Images/promo-logo.png" /></div>
+        		</div>
+        		<div class="absortion">
+        			<div class="image"><img src="/Content/Images/absortion-img.png" /></div>
+        			<div class="text-absortion">
+        				<div class="text-one">Absorve Melhor</div>
+        				<div class="text-two">O fluxo e o suor</div>
+        			</div>
+        		</div>
+        		<div class="promo-logo desktop">
+        			<div class="promo-text">Promoção</div>
+        			<div class="promo-img"><img src="/Content/Images/promo-logo.png" /></div>
+        		</div>
+        		<div class="buyit">
+        			<div class="buy-text"><span class="big">Compre R$20</span><span class="small">Em produtos*</span></div>
+        			<div class="buy-win"><span class="big-yellow">Ganhe</span></div>
+        			<div class="buy-prize"><span class="medium-yellow">30 dias de academia</span></div>
+        			<div class="gympass"><img src="/Content/Images/logo-gympass.png" /></div>
+        		</div>
+        	</div>
+      		<div class="introduction-footer">
+      			<span class="pink">Conheça o produto na prática com</br>a Promoção <span class="white">Gympass Intimus Sport</span></span>
+      		</div>
+      		<div class="arrow"><img src="/Content/Images/arrow.png" /></div>
+      		<div class="steps-wrapper container">
+	      		<div class="steps">
+	      			<div class="title">
+	      				<span class="first">Passo</span>
+	      				<span class="second">A</span>
+	      				<span class="third">Passo</span></div>
+	      		</div>
+	      		<div class="steps-list mobile">
+	      			<div class="itens">
+	      				<div class="number">1</div>
+	      				<img src="/Content/Images/first-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>Tire uma foto do<br/><span class="bg-pink">cupom fiscal.</span></div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">2</div>
+	      				<img src="/Content/Images/sec-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>Envie por meio<br/><span class="bg-pink">deste site.</span></div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">3</div>
+	      				<img src="/Content/Images/third-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>AGUARDE O RECEBIMENTO<br/><span class="bg-pink">DO VOUCHER.</span>ISSO PODE LEVAR ALGUNS DIAS.</div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">4</div>
+	      				<img src="/Content/Images/fourth-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div><span class="bg-pink">Cadastre o voucher<br/></span>no site da Gympass<br/>e comece a treinar!</div>
+	      			</div>
+	      		</div>
+	      		<div class="steps-list desktop">
+	      			<div class="itens">
+	      				<div class="number">1</div>
+	      				<img src="/Content/Images/first-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>Tire uma foto do<span class="bg-pink">cupom fiscal.</span></div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">2</div>
+	      				<img src="/Content/Images/sec-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>Envie por meio<span class="bg-pink">deste site.</span></div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">3</div>
+	      				<img src="/Content/Images/third-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div>AGUARDE O RECEBIMENTO<span class="bg-pink">DO VOUCHER.</span><br/>ISSO PODE LEVAR ALGUNS DIAS.</div>
+	      			</div>
+	      			<div class="itens">
+	      				<div class="number">4</div>
+	      				<img src="/Content/Images/fourth-step.png" />
+	      			</div>
+	      			<div class="steps-text">
+	      				<div><span class="bg-pink">Cadastre o voucher </span>no site<br/>da Gympass e comece a treinar!</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      	<div class="form-wrapper container">
+	      		<div class="form-text">
+	      			<span class="bg-pink">PREENCHA</span><br/>OS CAMPOS<br/> PARA<br/>PARTICIPAR:
+	      		</div>
+	      		<div class="form">
+				    <form name="intimus" id="frmUpCp" action="" onsubmit="return validateForm()">
+
+				    <label for="fname">Nome:</label>
+				    <input type="text" id="fname" name="firstname">
+
+				    <label for="cpf">CPF:</label>
+                        <input type="text" id="cpf" name="cpf">
+
+				    <label for="email">E-mail:</label>
+				    <input type="text" id="email" name="email">
+
+					    <div class="file-upload">
+						    <span>Enviar Cupom-fiscal</span>
+                            <input type="file" name="pic" id="file">
+					    </div>
+
+				    <div class="inputs-wrapper">
+					    <label class="container">Aceita receber informações de produtos
+							    <input type="checkbox" id="infos">
+							    <span class="checkmark"></span>
+						    </label>
+					    <br/>
+					    <label class="container">LI E CONCORDO COM O REGULAMENTO
+							    <input type="checkbox" id="rules">
+							    <span class="checkmark"></span>
+						    </label>
+				    </div>
+						    
+                    <input type="submit" id="btnEnviar" value="Cadastrar">
+                        <br />
+                        <span id="MsgErro" style="color:red"></span>
+				    </form>
+	      		</div>
+	      	</div>
+	      	<div class="sac container">
+	      		<div>SAC: 0800-7095599</div>
+	      		<div class="pink">Confira os termos de uso</div>
+	      	</div>
+	      	<div class="footer">
+	      		<div class="menu-footer">
+	      			<span><a href="https://www.intimus.com.br/contato">Contato</a></span>
+	      			<span><a href="https://www.intimus.com.br/termos-de-uso">Termos de Uso</a></span>
+	      			<span><a href="https://www.intimus.com.br/politica-de-privacidade">Politica de privacidade</a></span>
+	      		</div>
+	      		<div class="social-menu-footer">
+	      			<span><a href="https://www.facebook.com/Intimus"><img src="/Content/Images/icon-social-facebook.png" /></a></span>
+	      			<span><a href="https://www.youtube.com/user/intimusonline"><img src="/Content/Images/icon-social-youtube.png" /></a></span>
+	      			<span><a href="https://www.instagram.com/intimusoficial/"><img src="/Content/Images/icon-social-instagram.png" /></a></span>
+	      		</div>
+	      	</div>
+	      	<div class="kc"><img src="/Content/Images/kc-logo.jpg" /></div>
+        </div>
+        <script src="/Scripts/index.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('#cpf').inputmask({
+                    mask: ['999.999.999-99'],
+                    keepStatic: true
+                });
+                $('#btnEnviar').click(function (e) {
+                    if (!validateForm)
+                        return;
+                    e.preventDefault();
+                    //if (!$("#frmUpCp").valid())
+                    //    return;
+                    var fdata = new FormData();
+                    fdata.append("cpf", $('#cpf')[0].value);
+                    fdata.append("email", $('#email')[0].value);
+                    fdata.append("name", $('#fname')[0].value);
+                    if ($("#file")[0].files.length > 0)
+                        fdata.append("ReceiptFile", $("#file")[0].files[0]);
+
+                    $.ajax({
+                        url: '../Promotion/receipt/save',
+                        type: 'POST',
+                        data: fdata,
+                        async: false,
+                        beforeSend: function (data) {
+                            console.log("Enviando");
+                        },
+                        success: function (data) {
+                            console.log("Enviado");
+                            $("#MsgErro").html("Participação realizada.");
+                            $("#MsgErro").show();
+                        },
+                        error: function (data) {
+                            $("#MsgErro").html("Erro no cadastro");
+                            $("#MsgErro").show();
+                        },
+                        cache: false,
+                        contentType: false,
+                        processData: false
+                    });
+                });
+            });
+        </script>
+        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+        <!-- <script>
+            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+        </script> 
+        <script src="https://www.google-analytics.com/analytics.js" async defer></script>-->
+    </body>
 </html>
