--- a/Coupons/Promotion.Coupon/Views/Home/InitFlow.cshtml
+++ b/Coupons/Promotion.Coupon/Views/Home/InitFlow.cshtml
@@ -41,7 +41,8 @@
 <body>
     <div class="panel-body">
         <div class="col-md-2"></div>
-        <div class="col-md-8"> <form id="frmUpCp">
+        <div class="col-md-8"> 
+        <form id="frmUpCp">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h6 class="panel-title">
